[package]
name = "Amplitude"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.9.0", features = ["dynamic"] }
rand = "0.8.5"
noise = "0.8.2"
bevy-debug-text-overlay = "4.0.1"
bevy-inspector-egui = "0.14"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
